<resources>
    <string name="app_name">MultiPairingWithUI</string>
    <string name="value2">TextView</string>
    <string name="value1">TextView</string>
    <string name="connect1btn">Connect</string>
    <string name="connect0btn">Connect</string>
    <string name="value0">TextView</string>
    <string name="reconnectRight">Right</string>
    <string name="BroadcastValue">value :</string>
    <string name="signMessage">수화하세요</string>

    <string name="bluetoothStateLeft">왼손 상태</string>
    <string name="bluetoothStateRight">오른손 상태</string>
    <string name="reconnectLeft">Left</string>
    <string name="left_paper">left_paper</string>
    <string name="left_rock">left_rock</string>
    <string name="right_paper">right_paper</string>
    <string name="right_rock">right_rock</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
</resources>
